provide raw html

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
         <div id="output">
         </div>
 
+        <h2>Raw HTML</h2>
+        <textarea id="output-raw" style="width: 100%; height: 20em;">
+        </textarea>
+
         <h2>License?</h2>
 
         <p><a href="http://opensource.org/licenses/MIT">MIT</a></p>
