--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <h2>Why?</h2>
 
-        <p>At <a href="http://event-fabric.com">Event Fabric</a> we need to display JSON to people from all technical levels without being to technical but also without loosing information about the underlying JSON object.</p>
+        <p>At <a href="http://event-fabric.com">Event Fabric</a> we need to display JSON to people from all technical levels without being to technical but also without losing information about the underlying JSON object.</p>
 
         <h2>How?</h2>
 
