--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
 
         <p><a href="http://opensource.org/licenses/MIT">MIT</a></p>
 
+        <h2>Alternatives</h2>
+        <ul>
+            <li><a href="https://github.com/padolsey/prettyPrint.js">prettyprint.js</a></li>
+        </ul>
+
 
         <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.16.0/codemirror.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/3.16.0/mode/javascript/javascript.min.js" data-main="js/demo"></script>
