treat empty values by having "(Empty <type>)" in a light color and small text closes #8

--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
     "customization?": ["customize the css prefix", "change the css file"],
     "integer": 42,
     "float": 12.3,
-    "bool": true
+    "bool": true,
+    "emptyString": "",
+    "emptyArray": [],
+    "emptyObject": {},
+    "htmlEntities": "   <- trailing <em>   & </em> and some html   "
   }
 }
         </textarea>
