in text, handle new lines and convert them to html line breaks

--- a/index-no-requirejs.html
+++ b/index-no-requirejs.html
@@ -35,7 +35,7 @@
 
         <textarea id="input">{
   "name": "json.human",
-  "description": "Convert JSON to human readable HTML",
+  "description": "Convert\n JSON to human readable\r HTML",
   "author": "Mariano Guerra <mariano@marianoguerra.org>",
   "tags": ["DOM", "HTML", "JSON", "Pretty Print"],
   "version": "0.1.0",
