show format and render time

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
             <button id="convert">Convert</button>
         </div>
 
+        <h2>Time</h2>
+
+        <p>Format Time: <span id="format-time"></span></p>
+        <p>Render Time: <span id="render-time"></span></p>
+
         <h2>Output: HTML</h2>
 
         <div id="output">
